# actix-seaorm-todo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  rust.yml
src/: main.rs
src/config/: mod.rs
