[package]
name = "actix-seaorm-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

env_logger = "^0.10.1"

dotenvy = "^0.15.7"

serde = { version = "^1.0.193", features = ["derive"] }
serde_json = "^1.0.108"

sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
